# code-auditor

./: .gitignore  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml  report_2025-02-25T23-37-57.docx  requirements.in  requirements.txt  ~$port_2025-02-25T23-37-57.docx
.github/workflows/: python-publish.yml
src/codeauditor/: __init__.py  cli.py  report.py
src/codeauditor/aggregator/: packaging.py  testing.py
src/codeauditor/analyser/: code_markdown.py  code_python.py  conduct.py  documentation.py  git.py  jupyter_notebook.py  license.py  testing_python.py
src/codeauditor/analyser/data/: licenses.json
src/codeauditor/templates/: issues.yaml
src/codescanner/: __init__.py  cli.py  metadata.py  processor.py  report.py  rule.py  utils.py
src/codescanner/aggregator/: __init__.py  citation.py  code.py  community.py  documentation.py  license.py  metadata.py  packaging.py  repository.py  testing.py  version_control.py
src/codescanner/analyser/: __init__.py  changelog.py  citation.py  code.py  code_jupyter.py  code_markdown.py  code_python.py  community.py  conduct.py  contributing.py  dependecy_python.py  documentation.py  git.py  jupyter.py  license.py  notice.py  packaging_python.py  python.py  report.py
src/codescanner/templates/: issues.yaml  report.md
src/codescholar/: __init__.py  cli.py  report.py
src/codescholar/aggregator/: __init__.py  citation.py  documentation.py  version_control.py
src/codescholar/analyser/: code.py  contributing.py  jupyter_notebook.py  notice.py
src/codescholar/templates/: issues.yaml
(+1 files in other folders)
