[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CodeScanner"
version = "0.0.1"
authors = [
  { name="Serkan Girgin", email="girgink@gmail.com" },
]
description = "A package to test compliance of software with best practices."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SS-NES/CodeScanner"
Issues = "https://github.com/pypa/CodeScanner/issues"