[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CodeScanner"
version = "0.0.1"
authors = [
  { name="Serkan Girgin", email="girgink@gmail.com" },
  { name="Robert Ohuru", email="r.o.ohuru@utwente.nl"},
]
description = "A package to test compliance of software with best practices."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "click >=7.0, <9",
  "docstring_parser",
  "gitpython",
  "pyyaml",
]

[project.urls]
Homepage = "https://github.com/SS-NES/CodeScanner"
Issues = "https://github.com/SS-NES/CodeScanner/issues"

[project.scripts]
codescanner = "codescanner.cli:main"